--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,5 @@
 # BEGIN_KITTY_THEME
-# Rosé Pine
+# Tokyo Night Moon
 include current-theme.conf
 # END_KITTY_THEME
 
@@ -8,11 +8,7 @@ font_family IosevkaTerm NF Bold
 bold_font IosevkaTerm NF Heavy
 italic_font IosevkaTerm NF Bold Oblique
 bold_italic_font IosevkaTerm NF Heavy Oblique
-font_size 15
-
-# Title Bar
-wayland_titlebar_color #191724
-macos_titlebar_color #191724
+font_size 15.5
 
 # Window
 remember_window_size no
@@ -20,17 +16,13 @@ initial_window_width  1920
 initial_window_height 1080
 enabled_layouts tall:bias=50;full_size=1;mirrored=false
 placement_strategy center
-active_border_color #ea9a97
-inactive_border_color   #737994
-bell_border_color       #E5C890
-
+hide_window_decorations no
+window_border_width 1
+wayland_titlebar_color #1e2030
+window_logo_path none
+window_logo_position center
 
 # Tabs
 tab_bar_edge top
 tab_bar_style powerline
-tab_bar_margin_color #ea9a97
 tab_fade 0.25 0.5 0.75 1
-active_tab_background #ea9a97
-active_tab_foreground #1f1d2e
-inactive_tab_background #21202e
-inactive_tab_foreground #908caa
